--- a/ui/client-react/src/components/report/report.scss
+++ b/ui/client-react/src/components/report/report.scss
@@ -30,6 +30,10 @@
     }
 }
 .reportToolsAndContentContainer {
+    display:flex;
+    flex: 1 1 auto;
+
+
     .tableActionsContainer {
         position: relative;
         padding-left: 10px;
@@ -43,7 +47,7 @@
         }
     }
 
-    flex: 1 1 auto;
+
     .reportToolbar {
         display: flex;
         flex-direction: row;
